--- a/comics.css
+++ b/comics.css
@@ -1,4 +1,7 @@
 body{
+	display: grid;
+	grid-template-columns: 20% 1fr;
+    grid-template-rows: 50px 1fr;
     background-color: gray;
 }
 
@@ -6,11 +9,28 @@ p{
     display: inline;
 }
 
+.left_menu{
+	width: 100%;
+	grid-row: 1/3;
+    grid-column: 1/2;
+	border: solid 3px white;
+}
+
+.left_menu_title{
+	text-align: center;
+	border: solid 3px white;
+}
+
+.form{
+	margin: 10px;
+}
+
 img{
     height: 90vh;
 }
 
 .pics_over_control{
+	margin: 10px;
 	position: relative;
 	width: fit-content;
 	height: fit-content;
