--- a/comics.css
+++ b/comics.css
@@ -1,5 +1,6 @@
 body{
 	display: grid;
+	height: 98vh;
 	grid-template-columns: 20% 1fr;
     grid-template-rows: 50px 1fr;
     background-color: gray;
@@ -11,6 +12,9 @@ p{
 
 .left_menu{
 	width: 100%;
+	height: 100%;
+	white-space: nowrap;
+	overflow: scroll;
 	grid-row: 1/3;
     grid-column: 1/2;
 	border: solid 3px white;
@@ -19,6 +23,10 @@ p{
 .left_menu_title{
 	text-align: center;
 	border: solid 3px white;
+}
+
+.left_menu_item{
+	
 }
 
 .form{
